# aiolichess

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
aiolichess/: __init__.py  client.py  exceptions.py  models.py
